@@ -208,35 +208,44 @@ if ($needs_binmode) {
 }
 
 %EXPORT_TAGS = (
-		':html2'=>['h1'..'h6',qw/p br hr ol ul li dl dt dd menu code var strong em
-			   tt u i b blockquote pre img a address cite samp dfn html head
-			   base body Link nextid title meta kbd start_html end_html
-			   input Select option comment charset escapeHTML/],
-		':html3'=>[qw/div table caption th td TR Tr sup Sub strike applet Param nobr
-			   embed basefont style span layer ilayer font frameset frame script small big Area Map/],
-                ':html4'=>[qw/abbr acronym bdo col colgroup del fieldset iframe
-                            ins label legend noframes noscript object optgroup Q 
-                            thead tbody tfoot/], 
-		':netscape'=>[qw/blink fontsize center/],
-		':form'=>[qw/textfield textarea filefield password_field hidden checkbox checkbox_group 
-			  submit reset defaults radio_group popup_menu button autoEscape
-			  scrolling_list image_button start_form end_form startform endform
-			  start_multipart_form end_multipart_form isindex tmpFileName uploadInfo URL_ENCODED MULTIPART/],
-		':cgi'=>[qw/param upload path_info path_translated request_uri url self_url script_name 
-			 cookie Dump
-			 raw_cookie request_method query_string Accept user_agent remote_host content_type
-			 remote_addr referer server_name server_software server_port server_protocol virtual_port
-			 virtual_host remote_ident auth_type http append
-			 save_parameters restore_parameters param_fetch
-			 remote_user user_name header redirect import_names put 
-			 Delete Delete_all url_param cgi_error/],
-		':ssl' => [qw/https/],
-		':cgi-lib' => [qw/ReadParse PrintHeader HtmlTop HtmlBot SplitParam Vars/],
-		':html' => [qw/:html2 :html3 :html4 :netscape/],
-		':standard' => [qw/:html2 :html3 :html4 :form :cgi/],
-		':push' => [qw/multipart_init multipart_start multipart_end multipart_final/],
-		':all' => [qw/:html2 :html3 :netscape :form :cgi :internal :html4/]
-		);
+	':html2' => [ 'h1' .. 'h6', qw/
+		p br hr ol ul li dl dt dd menu code var strong em
+		tt u i b blockquote pre img a address cite samp dfn html head
+		base body Link nextid title meta kbd start_html end_html
+		input Select option comment charset escapeHTML
+	/ ],
+	':html3' => [ qw/
+		div table caption th td TR Tr sup Sub strike applet Param nobr
+		embed basefont style span layer ilayer font frameset frame script small big Area Map
+	/ ],
+	':html4' => [ qw/
+		abbr acronym bdo col colgroup del fieldset iframe
+		ins label legend noframes noscript object optgroup Q
+		thead tbody tfoot
+	/ ],
+	':form'     => [ qw/
+		textfield textarea filefield password_field hidden checkbox checkbox_group
+		submit reset defaults radio_group popup_menu button autoEscape
+		scrolling_list image_button start_form end_form startform endform
+		start_multipart_form end_multipart_form isindex tmpFileName uploadInfo URL_ENCODED MULTIPART
+	/ ],
+	':cgi' => [ qw/
+		param upload path_info path_translated request_uri url self_url script_name
+		cookie Dump raw_cookie request_method query_string Accept user_agent remote_host content_type
+		remote_addr referer server_name server_software server_port server_protocol virtual_port
+		virtual_host remote_ident auth_type http append save_parameters restore_parameters param_fetch
+		remote_user user_name header redirect import_names put Delete Delete_all url_param cgi_error
+	/ ],
+	':netscape' => [qw/blink fontsize center/],
+	':ssl'      => [qw/https/],
+	':cgi-lib'  => [qw/ReadParse PrintHeader HtmlTop HtmlBot SplitParam Vars/],
+	':push'     => [qw/multipart_init multipart_start multipart_end multipart_final/],
+
+	# bulk export/import
+	':html'     => [qw/:html2 :html3 :html4 :netscape/],
+	':standard' => [qw/:html2 :html3 :html4 :form :cgi :ssl/],
+	':all'      => [qw/:html2 :html3 :html4 :netscape :form :cgi :ssl :push/]
+);
 
 # Custom 'can' method for both autoloaded and non-autoloaded subroutines.
 # Author: Cees Hek <cees@sitesuite.com.au>
@@ -4896,12 +4905,14 @@ Import all HTML-generating shortcuts (i.e. 'html2', 'html3', 'html4' and 'netsca
 
 =item B<:standard>
 
-Import "standard" features, 'html2', 'html3', 'html4', 'form' and 'cgi'.
+Import "standard" features, 'html2', 'html3', 'html4', 'ssl', 'form' and 'cgi'.
 
 =item B<:all>
 
 Import all the available methods.  For the full list, see the CGI.pm
-code, where the variable %EXPORT_TAGS is defined.
+code, where the variable %EXPORT_TAGS is defined. (N.B. the :cgi-lib
+imports will B<not> be included in the :all import, you will have to
+iport :cgi-lib to get those)
 
 =back
 
